1/15/13 move static ChallengeFactory.createChallenges to LineGameModel
1/15/13 implementation of challenge generation for level=6
1/15/13 provide random choosers as members of ChallengeFactory base class
1/15/13 completed challenge generation for level=5
1/15/13 incremental progress on level=5
1/15/13 rename some methods in ChallengeFactory
1/14/13 partial implementation of challenge generation for level=5
1/14/13 consolidated random choices into RandomChooser, a generically-typed class for making random choices from lists and lists-of-lists
1/14/13 rename ChallengeFactory methods to pick*FromBin
1/14/13 first draft of model.txt
# 0.00.50 (71658) Jan 12, 2013
1/12/13 implemented all change requests from 1/10/13 design meeting
1/12/13 fix: initially hide answer equation for MTE challenges
1/12/13 fix: force view to reinitialize when replaying a challenge
1/12/13 make everything invisible by default in challenge graphs, since this is closer to most default states
1/12/13 all challenges: plot (x1,y1) for answer and guess if they get the challenge wrong
1/12/13 for PTP challenges, only show guess lines when (!correct && (state=TRY_AGAIN || state==NEXT))
1/10/13 use only positive slopes for challenges in level 4 that force slope inversion
1/10/13 show guess ("Your Line" for GLT, "A Correct Equation" for MTE) only if they get the challenge wrong, to avoid issue of different equations for the same line
1/10/13 in level 1, change y-intercept range to (-6,4)
1/10/13 fix: scoreboard always displays level 6
1/10/13 change: "Correct Answer" to "A Correct Answer"
1/10/13 change order of graph controls: slope tool, y=x, y=-x, Hide lines
# 0.00.49 (71607) Jan 9, 2013
1/9/13 dev version with challenge generation for levels 1-4
1/9/13 document why mvt is created in model
1/9/13 various changes in comments for LineForm to EquationForm change
1/9/13 rename LineForm to EquationForm, rename local variables accordingly